--- a/css/index.css
+++ b/css/index.css
@@ -3,37 +3,26 @@
 }
 
 html, body {
-    height: 100%;
     margin: 0;
     padding: 0;
-    width: 100%;
 }
 
 h1 { font-size: 32px; }
 
 /* links */
-a {
-    background-color: #DCDCDC;
-    color: #008CBC;
+nav a {
+    display: block;
+    cursor: pointer;
     text-decoration: none;
-}
-
-nav a,
-#Reference a {
-    background-color: initial;
-}
-
-nav a:link {
-    color: #FFFFFF;
+    padding: 20px 0 5px 20px;
 }
 
 nav a:visited {
-    color: #2F2F2F;
+    color: #2f2f2f;
 }
 
 nav a:hover {
-    background-color: #FFFFFF;
-    color: #000000;
+    background-color: #ffffff;
 }
 
 section a:visited {
@@ -41,66 +30,55 @@ section a:visited {
 }
 
 #Reference a {
-    color: #008CBC;
+    color: #008cbc;
 }
 
 /* nav */
 nav {
     background: #000000;
-    color: #FFFFFF;
-    left: 0;
-    position: relative;
-    right: 0;
-    top: 0;
+    color: #ffffff;
 }
 
 nav header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     font-size: 20px;
     height: 50px;
-    line-height: 50px;
-    text-align: center;
 }
 
 nav ul {
-    background-color: #cccccc;
+    background-color: #7fffd4;
     list-style: none;
     margin: 0;
-    overflow: auto;
     padding: 0;
 }
 
 nav li {
-    border-bottom: 1px solid #FFFFFF;
+    border-bottom: 1px solid #ffffff;
     font-size: 18px;
-    padding: 20px 0 5px 20px;
-}
-
-nav li:last-child {
-    border-bottom: none;
-}
-
-ul:last-child {
-    padding-bottom: 5px;
 }
 
 /* main */
 main {
-    padding: 0 20px 20px;
+    padding: 0 20px;
 }
 
 pre {
     border-left: 3px solid #7b7b7b;
 }
 
-dd {
-    margin-bottom: 6px;
-}
-
 dt {
-    margin-bottom: 2px;
+    margin: 5px 0;
 }
 
-@media (min-width: 815px) {
+.language-css, .language-html, .language-\* {
+    background-color: #cccccc;
+    display: inline-block;
+    padding: 0 15px;
+}
+
+@media screen and (min-width: 900px) {
     nav {
         height: 100%;
         position: fixed;
@@ -108,13 +86,9 @@ dt {
     }
     nav ul {
         height: 100%;
-        overflow-y: auto;
     }
     main {
         left: 300px;
         position: absolute;
-        right: 0;
-        top: 0;
-        padding-left: 20px;
     }
 }
